fix typo in cron.yaml

--- a/.github/workflows/cron.yaml
+++ b/.github/workflows/cron.yaml
@@ -25,6 +25,6 @@ jobs:
       - name: execute js script 
         env: 
           PUSHOVER_USER: ${{ secrets.PUSHOVER_USER }}
-          PUSHOVER_TOKEN: $${ secrets.PUSHOVER_TOKEN }}
+          PUSHOVER_TOKEN: ${ secrets.PUSHOVER_TOKEN }}
         run: bun run weather.ts
           
