--- a/.github/workflows/cron.yaml
+++ b/.github/workflows/cron.yaml
@@ -12,20 +12,18 @@ jobs:
     runs-on: ubuntu-latest
     environment: default
     steps:
+      - name: setup python
+        uses: actions/setup-python@v4
 
-      - name: checkout repo content
-        uses: actions/checkout@v3 # checkout the repository content to github runner
-
-      - uses: oven-sh/setup-bun@v1
-        with:
-          bun-version: latest
+      - name: install python packages
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
           
-      - name: install js packages
-        run: bun install
-          
-      - name: execute js script 
+      - name: execute py script 
         env: 
           PUSHOVER_USER: ${{ secrets.PUSHOVER_USER }}
           PUSHOVER_TOKEN: ${{ secrets.PUSHOVER_TOKEN }}
-        run: bun run weather.ts
+        run: python weather.py
+          
           
