--- a/.github/workflows/cron.yaml
+++ b/.github/workflows/cron.yaml
@@ -12,13 +12,12 @@ jobs:
     runs-on: ubuntu-latest
     environment: default
     steps:
-      - name: setup python
-        uses: actions/setup-python@v4
-          
+      - uses: actions/checkout@v3
+      - uses: actions/setup-python@v4
       - name: execute py script 
         env: 
           PUSHOVER_USER: ${{ secrets.PUSHOVER_USER }}
           PUSHOVER_TOKEN: ${{ secrets.PUSHOVER_TOKEN }}
-        run: python ../weather.py
+        run: python weather.py
           
           
