--- a/.github/workflows/cron.yaml
+++ b/.github/workflows/cron.yaml
@@ -3,19 +3,17 @@ name: weather_checker
 on:
   schedule:
     - cron: '0 14 * * *' # runs at 14:00 UTC everyday
-
 jobs:
   build:
-    runs-on: ubuntu-latest
     environment: default
+    runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-python@v4
-      - name: execute py script 
+      - uses: actions/checkout@v2
+      - uses: actions-rs/toolchain@v1
+        with:
+          toolchain: stable
+      - name: do it
         env: 
           PUSHOVER_USER: ${{ secrets.PUSHOVER_USER }}
           PUSHOVER_TOKEN: ${{ secrets.PUSHOVER_TOKEN }}
-          TAKOMA_PARK_FORECAST_URL: "https://api.weather.gov/gridpoints/LWX/97,75/forecast/hourly"
-        run: python weather.py $TAKOMA_PARK_FORECAST_URL $PUSHOVER_USER $PUSHOVER_TOKEN
-          
-          
+        run: cargo run
