--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,4 +7,5 @@ edition = "2021"
 chrono = { version = "0.4.24", features = ["unstable-locales"] }
 reqwest = { version = "0.11", features = ["blocking", "json"] }
 serde = { version = "1", features = ["derive"] }
+anyhow = "1.0"
 serde_json = "1"
