--- a/.github/workflows/cron.yaml
+++ b/.github/workflows/cron.yaml
@@ -18,8 +18,22 @@ jobs:
           path: |
             ~/.cargo/registry
             ~/.cargo/git
-            target
           key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
+
+      - name: Cargo Target Cache
+        uses: actions/cache@v1
+        with:
+          path: target
+          key: ${{ runner.os }}-cargo-target-${{ hashFiles('Cargo.toml') }}
+          restore-keys: |
+            ${{ runner.os }}-cargo-target-${{ hashFiles('Cargo.toml') }}
+            ${{ runner.os }}-cargo-target
+
+      - name: Build
+        uses: actions-rs/cargo@v1
+        with:
+          command: build
+
       - name: Run
         env:
           PUSHOVER_USER: ${{ secrets.PUSHOVER_USER }}
