--- a/.github/workflows/cron.yaml
+++ b/.github/workflows/cron.yaml
@@ -9,9 +9,11 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - uses: oven-sh/setup-bun@v1
+      - uses: actions/setup-python@v4
       - name: Run
+        with:
+          python-version: "3.11"
         env:
           PUSHOVER_USER: ${{ secrets.PUSHOVER_USER }}
           PUSHOVER_TOKEN: ${{ secrets.PUSHOVER_TOKEN }}
-        run: bun main.js
+        run: python main.py
